GPII-364: Added "Contrast options" heading. Had to do that in a listener and not in the protoTree because protoTrees don't merge and i was overriding "fluid.prefs.panel.contrast"'s protoTree. Corrected a preview container layout issue.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -452,6 +452,7 @@ input[type=checkbox], input[type=radio] {
 }
 
 .gpii-prefsEditor-previewPerSettingContainer {
+	display: inline-block;
     background-color: white;
     border: 1px solid #beced1;
     color: #B8C9CC;
